# X-JVM

./: CMakeLists.txt  Jvm.cpp  Jvm.h  README.md  ReadMe.MD  TROUBLESHOOTING.md  build.bat  build.ps1  clean.bat  main.cpp  run-example.bat  run-jvm.bat  set_env.bat  setup-clion.bat  setup-deps.bat  setup-mingw-boost.bat  setup-vcpkg-mingw.bat  test_simple.cpp
classfile/: AttributesInfo.cpp  AttributesInfo.h  ClassFile.cpp  ClassFile.h  ConstantPools.cpp  ConstantPools.h  ConstantPoolsList.cpp  ConstantPoolsList.h  Constant_Class.cpp  Constant_Class.h  Constant_Double_info.cpp  Constant_Double_info.h  Constant_FieldRef.cpp  Constant_FieldRef.h  Constant_Float_info.cpp  Constant_Float_info.h  Constant_Integer_info.cpp  Constant_Integer_info.h  Constant_InterfaceMethodRef.cpp  Constant_InterfaceMethodRef.h  Constant_InvokeDynamic_info.cpp  Constant_InvokeDynamic_info.h  Constant_Long_info.cpp  Constant_Long_info.h  Constant_MethodHandle_info.cpp  Constant_MethodHandle_info.h  Constant_MethodRef.cpp  Constant_MethodRef.h  Constant_MethodType_info.cpp  Constant_MethodType_info.h  Constant_NameAndType_info.cpp  Constant_NameAndType_info.h  Constant_String_info.cpp  Constant_String_info.h  Constant_Utf8_info.cpp  Constant_Utf8_info.h  FieldInfo.cpp  FieldInfo.h  MethodInfo.cpp  MethodInfo.h  (+2 more)
classfile/attributeInfo/: Annotation.cpp  Annotation.h  AnnotationDefaultAttribute.cpp  AnnotationDefaultAttribute.h  BootstrapMethod.cpp  BootstrapMethod.h  BootstrapMethodAttribute.cpp  BootstrapMethodAttribute.h  ClassessInner.cpp  ClassessInner.h  Code_attribute.cpp  Code_attribute.h  ConstantValue.cpp  ConstantValue.h  DeprecatedAttribute.cpp  DeprecatedAttribute.h  ElementValue.cpp  ElementValue.h  ElementValuePairs.cpp  ElementValuePairs.h  EnclosingMethdAttribute.cpp  EnclosingMethdAttribute.h  Exception_table.cpp  Exception_table.h  Exceptions_attribute.cpp  Exceptions_attribute.h  InnerClasses.cpp  InnerClasses.h  LineNumberTable.cpp  LineNumberTable.h  LineNumberTableAttribute.cpp  LineNumberTableAttribute.h  LocalVariableTable.cpp  LocalVariableTable.h  LocalVariableTableAttribute.cpp  LocalVariableTableAttribute.h  LocalVariableTypeTable.cpp  LocalVariableTypeTable.h  LocalVriableTypeTableAttribute.cpp  LocalVriableTypeTableAttribute.h  (+26 more)
common/: Common.h  Internal.h  JvmEnums.h
instructions/: InstructionFactory.cpp  InstructionFactory.h
instructions/base/: ByteCodeReader.cpp  ByteCodeReader.h  Instructions.cpp  Instructions.h
instructions/comparisons/: Comparisons.cpp  Comparisons.h
instructions/constants/: BiSiPush.cpp  BiSiPush.h  Const.cpp  Const.h  Ldc.cpp  Ldc.h  NoOp.cpp  NoOp.h
instructions/control/: GoTo.cpp  GoTo.h  Return.cpp  Return.h
instructions/load/: Aload.cpp  Aload.h  Load.cpp  Load.h
instructions/maths/: Maths.cpp  Maths.h
instructions/reference/: Array.cpp  Array.h  GetStatic.cpp  GetStatic.h  InvokeStatic.cpp  InvokeStatic.h  NewRef.cpp  NewRef.h  PutStatic.cpp  PutStatic.h
instructions/stack/: StackCommand.cpp  StackCommand.h
instructions/store/: AStore.cpp  AStore.h  Store.cpp  Store.h
interpret/: Interpret.cpp  Interpret.h
lang/: ByteQueue.cpp  ByteQueue.h
runtime/: ClassLoader.cpp  ClassLoader.h  HeapConstantUtils.cpp  HeapConstantUtils.h  JavaFrame.cpp  JavaFrame.h  JavaRuntime.cpp  JavaRuntime.h  JavaThread.cpp  JavaThread.h  JavaType.cpp  JavaType.h  LocalVariableTables.cpp  LocalVariableTables.h  MethodArea.cpp  MethodArea.h  Object.cpp  Object.h  OperandStack.cpp  OperandStack.h  RuntimeStack.cpp  RuntimeStack.h  Slots.cpp  Slots.h  ThreadPool.cpp  ThreadPool.h
runtime/gc/: GarbageCollector.cpp  GarbageCollector.h  GarbageStatus.cpp  GarbageStatus.h
runtime/heap/: ClassMember.cpp  ClassMember.h  ConstantsPoolObject.cpp  ConstantsPoolObject.h  Entry.cpp  Entry.h  HeapAcessFlags.h  JavaClass.cpp  JavaClass.h  JavaHeap.cpp  JavaHeap.h  JavaType.cpp  JavaType.h  MethodDescriptor.cpp  MethodDescriptor.h  StringConstantPools.cpp  StringConstantPools.h  StrongRoots.cpp  StrongRoots.h
utils/: FileUtils.h  StringUtils.h  ZipUtils.cpp  ZipUtils.h
